@startuml estado-solicitacao
' Estados - SolicitacaoColeta
[*] --> aprovada : criada\n(nasce publicada, sem fila de aprovacao)
aprovada --> cancelada : cidadao cancela (sem coleta avancada)
aprovada --> removida : admin remove\n(moderacao reativa por abuso)
aprovada --> [*] : aceite gera Coleta
cancelada --> [*]
removida --> [*]
@enduml

@startuml estado-coleta
' Estados - Coleta
[*] --> aceita : empresa aceita
aceita --> a_caminho : empresa atualiza
a_caminho --> em_coleta : empresa atualiza
em_coleta --> concluida : empresa finaliza\n(grava dataConclusao)
aceita --> cancelada : cancelamento permitido
a_caminho --> cancelada : cancelamento permitido
concluida --> [*]
cancelada --> [*]
note right of em_coleta : a partir daqui o cidadao\nnao pode mais cancelar
@enduml

@startuml estado-conversa
' Estados - ConversaSolicitacao (chat pre-aceite)
[*] --> aberta : empresa inicia negociacao
aberta --> convertida : empresa vence o aceite
aberta --> encerrada : outra empresa vence
convertida --> [*]
encerrada --> [*]
@enduml
